[Soup] Suppress compiler warnings in NetworkStorageSession https://bugs.webkit.org/show_bug.cgi?id=169593

Reviewed by Carlos Garcia Campos.

Return default-constructed Vector objects in the NetworkStorageSession's
getAllCookies() and getCookies() methods, avoiding compiler warnings.

* platform/network/soup/NetworkStorageSessionSoup.cpp:
(WebCore::NetworkStorageSession::getAllCookies):
(WebCore::NetworkStorageSession::getCookies):


Canonical link: https://commits.webkit.org/186587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213891 268f45cc-cd09-0410-ab3c-d52691b4dbfc